BGE: FIX T43537: ImageMirror does not work in BlenderPlayer with quad buffer

In quad-buffer stereo mode, the GE render pass ends with the right eye on the right buffer, but we need to draw on the left buffer to capture the render.

Reviewed By: agoose77, HG1